--- a/pom.xml
+++ b/pom.xml
@@ -150,4 +150,11 @@
             </resource>
         </resources>
     </build>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/carlosmgv02/logging-library</url>
+        </repository>
+    </distributionManagement>
 </project>
