--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,6 +4,13 @@
 name: Maven Package
 
 on:
+  workflow_dispatch:   # Añadir esto para ejecutar manualmente
+    inputs:
+      branch:
+        description: 'Branch to run'
+        default: 'master'
+        required: true
+
   release:
     types: [created]
 
