--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
 version: '3.7'
-services:
 
+services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
+    image: elasticsearch:8.9.0
     container_name: elasticsearch
     environment:
       - node.name=elasticsearch
@@ -20,9 +20,10 @@ services:
       - "9200:9200"
     networks:
       - elk
+      - shared-network  # Red compartida
 
   logstash:
-    image: docker.elastic.co/logstash/logstash:8.9.0
+    image: logstash:8.9.0
     container_name: logstash
     volumes:
       - ./logstash/pipeline:/usr/share/logstash/pipeline
@@ -33,9 +34,10 @@ services:
       - elasticsearch
     networks:
       - elk
+      - shared-network  # Red compartida
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.9.0
+    image: kibana:8.9.0
     container_name: kibana
     environment:
       ELASTICSEARCH_HOSTS: http://elasticsearch:9200
@@ -45,21 +47,14 @@ services:
       - elasticsearch
     networks:
       - elk
-
-  otlp-collector:
-    image: otel/opentelemetry-collector:0.69.0
-    container_name: otlp-collector
-    command: ["--config=/etc/otel-collector-config.yaml"]
-    volumes:
-      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
-    ports:
-      - "4317:4317"
-    networks:
-      - elk
+      - shared-network  # Red compartida
 
 networks:
   elk:
     driver: bridge
+
+  shared-network:  # Red compartida
+    external: true
 
 volumes:
   esdata:
