--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,17 +95,17 @@ jobs:
       - name: Run SpotBugs analysis
         run: |
           echo "Running SpotBugs static analysis..."
-          mvn spotbugs:check
+          mvn -Pquality spotbugs:check
 
       - name: Run PMD analysis
         run: |
           echo "Running PMD code analysis..."
-          mvn pmd:check
+          mvn -Pquality pmd:check
 
       - name: Run Checkstyle
         run: |
           echo "Running Checkstyle..."
-          mvn checkstyle:check
+          mvn -Pquality checkstyle:check
 
       - name: Generate code coverage report
         run: |
@@ -152,6 +152,8 @@ jobs:
     name: Security Vulnerability Scan
     runs-on: ubuntu-latest
     needs: test
+    # Only run security scans on main branches or when explicitly triggered
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
 
     steps:
       - name: Checkout code
@@ -173,7 +175,8 @@ jobs:
       - name: Run OWASP Dependency Check
         run: |
           echo "Running OWASP dependency vulnerability scan..."
-          mvn org.owasp:dependency-check-maven:check
+          mvn org.owasp:dependency-check-maven:check -DfailOnError=false
+        continue-on-error: true
 
       - name: Upload OWASP report
         if: always()
@@ -194,7 +197,8 @@ jobs:
   build-verification:
     name: Build Verification
     runs-on: ubuntu-latest
-    needs: [test, code-quality, security-scan]
+    needs: [test, code-quality]
+    if: always() && (needs.test.result == 'success' && needs.code-quality.result == 'success')
 
     steps:
       - name: Checkout code
@@ -316,15 +320,23 @@ jobs:
           echo "### Test Results" >> $GITHUB_STEP_SUMMARY
           echo "- **Unit & Integration Tests:** ${{ needs.test.result }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Code Quality Checks:** ${{ needs.code-quality.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Security Scan:** ${{ needs.security-scan.result }}" >> $GITHUB_STEP_SUMMARY
+          
+          # Only show security scan results if it ran
+          if [[ "${{ needs.security-scan.result }}" != "skipped" ]]; then
+            echo "- **Security Scan:** ${{ needs.security-scan.result }}" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "- **Security Scan:** ⏭️ Skipped (only runs on main branches)" >> $GITHUB_STEP_SUMMARY
+          fi
+          
           echo "- **Build Verification:** ${{ needs.build-verification.result }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
-          if [[ "${{ needs.test.result }}" == "success" && "${{ needs.code-quality.result }}" == "success" && "${{ needs.security-scan.result }}" == "success" && "${{ needs.build-verification.result }}" == "success" ]]; then
-            echo "### ✅ All Checks Passed!" >> $GITHUB_STEP_SUMMARY
+          # Check if core checks passed (security scan is optional)
+          if [[ "${{ needs.test.result }}" == "success" && "${{ needs.code-quality.result }}" == "success" && "${{ needs.build-verification.result }}" == "success" ]]; then
+            echo "### ✅ All Essential Checks Passed!" >> $GITHUB_STEP_SUMMARY
             echo "The logging library is ready for release." >> $GITHUB_STEP_SUMMARY
           else
-            echo "### ❌ Some Checks Failed" >> $GITHUB_STEP_SUMMARY
+            echo "### ❌ Some Essential Checks Failed" >> $GITHUB_STEP_SUMMARY
             echo "Please review the failed jobs above." >> $GITHUB_STEP_SUMMARY
           fi
 
@@ -332,5 +344,7 @@ jobs:
           echo "### 📊 Available Reports" >> $GITHUB_STEP_SUMMARY
           echo "- Test results and coverage reports" >> $GITHUB_STEP_SUMMARY
           echo "- Static analysis reports (SpotBugs, PMD, Checkstyle)" >> $GITHUB_STEP_SUMMARY
-          echo "- Security vulnerability reports" >> $GITHUB_STEP_SUMMARY
+          if [[ "${{ needs.security-scan.result }}" != "skipped" ]]; then
+            echo "- Security vulnerability reports" >> $GITHUB_STEP_SUMMARY
+          fi
           echo "- Build artifacts and documentation" >> $GITHUB_STEP_SUMMARY
