--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -2,7 +2,7 @@ name: Auto Release
 
 on:
   push:
-    branches: [master, main, development]
+    branches: [master, main]
     paths:
       - 'src/**'
       - 'pom.xml'
