--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ permissions:
   contents: read
   pull-requests: write
   issues: write
+  checks: write
+  statuses: write
 
 jobs:
   # First job: Check if we need to run tests based on changed files
@@ -122,14 +124,36 @@ jobs:
       - name: Run tests
         run: mvn clean test
 
-      - name: Generate test report
-        uses: dorny/test-reporter@v1
+      - name: Generate test summary
         if: always()
-        with:
-          name: Maven Tests
-          path: target/surefire-reports/*.xml
-          reporter: java-junit
-          fail-on-error: true
+        run: |
+          echo "## 🧪 Test Results" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          if [ -f "target/surefire-reports/TEST-*.xml" ]; then
+            TOTAL_TESTS=$(grep -h "tests=" target/surefire-reports/TEST-*.xml | sed 's/.*tests="\([0-9]*\)".*/\1/' | awk '{sum+=$1} END {print sum}')
+            FAILED_TESTS=$(grep -h "failures=" target/surefire-reports/TEST-*.xml | sed 's/.*failures="\([0-9]*\)".*/\1/' | awk '{sum+=$1} END {print sum}')
+            ERRORS=$(grep -h "errors=" target/surefire-reports/TEST-*.xml | sed 's/.*errors="\([0-9]*\)".*/\1/' | awk '{sum+=$1} END {print sum}')
+            SKIPPED_TESTS=$(grep -h "skipped=" target/surefire-reports/TEST-*.xml | sed 's/.*skipped="\([0-9]*\)".*/\1/' | awk '{sum+=$1} END {print sum}')
+            
+            PASSED_TESTS=$((TOTAL_TESTS - FAILED_TESTS - ERRORS - SKIPPED_TESTS))
+            
+            echo "- **Total Tests:** $TOTAL_TESTS" >> $GITHUB_STEP_SUMMARY
+            echo "- **Passed:** ✅ $PASSED_TESTS" >> $GITHUB_STEP_SUMMARY
+            echo "- **Failed:** ❌ $FAILED_TESTS" >> $GITHUB_STEP_SUMMARY
+            echo "- **Errors:** ⚠️ $ERRORS" >> $GITHUB_STEP_SUMMARY
+            echo "- **Skipped:** ⏭️ $SKIPPED_TESTS" >> $GITHUB_STEP_SUMMARY
+            
+            if [ "$FAILED_TESTS" -eq 0 ] && [ "$ERRORS" -eq 0 ]; then
+              echo "" >> $GITHUB_STEP_SUMMARY
+              echo "### ✅ All tests passed!" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "" >> $GITHUB_STEP_SUMMARY
+              echo "### ❌ Some tests failed!" >> $GITHUB_STEP_SUMMARY
+            fi
+          else
+            echo "- **Status:** No test results found" >> $GITHUB_STEP_SUMMARY
+          fi
 
       - name: Upload test results
         if: always()
