--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
 name: CI - Tests & Quality Checks
 
 on:
-  push:
-    branches: [development, master, main]
   pull_request:
-    branches: [development, master, main]
+    branches: [development, master, main]  # Run on PRs to any of these branches
   workflow_dispatch:
 
 permissions:
@@ -264,7 +262,7 @@ jobs:
     name: Dependency Review
     runs-on: ubuntu-latest
     needs: check-relevance
-    if: github.event_name == 'pull_request' && needs.check-relevance.outputs.should-test == 'true'
+    if: github.event_name == 'pull_request'
 
     steps:
       - name: Checkout code
@@ -275,12 +273,12 @@ jobs:
         with:
           fail-on-severity: moderate
 
-  # Performance tests only when needed and not on every commit
+  # Performance tests only when explicitly needed
   performance-test:
     name: Performance Tests
     runs-on: ubuntu-latest
     needs: [check-relevance, test]
-    if: needs.check-relevance.outputs.should-test == 'true' && (github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/master')
+    if: needs.check-relevance.outputs.should-test == 'true' && github.event_name == 'workflow_dispatch'
 
     steps:
       - name: Checkout code
