--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -41,6 +40,19 @@
         <developerConnection>scm:git:ssh://github.com:carlosmgv02/logging-library.git</developerConnection>
         <url>https://github.com/carlosmgv02/logging-library/tree/master</url>
     </scm>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/carlosmgv02/logging-library</url>
+        </repository>
+        <snapshotRepository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/carlosmgv02/logging-library</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <properties>
         <java.version>17</java.version>
@@ -213,7 +225,7 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
-                    <parameters>true</parameters> <!-- Retener nombres de parámetros -->
+                    <parameters>true</parameters>                    <!-- Retener nombres de parámetros -->
                 </configuration>
             </plugin>
 
@@ -226,7 +238,7 @@
                     <nonFilteredFileExtensions>
                         <nonFilteredFileExtension>yaml</nonFilteredFileExtension>
                         <nonFilteredFileExtension>yml</nonFilteredFileExtension>
-                        <nonFilteredFileExtension>xml</nonFilteredFileExtension> <!-- Añadido para XML -->
+                        <nonFilteredFileExtension>xml</nonFilteredFileExtension>                        <!-- Añadido para XML -->
                     </nonFilteredFileExtensions>
                 </configuration>
             </plugin>
