--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -281,6 +281,13 @@ jobs:
           git push origin ${{ github.ref_name }}
           git push origin $TAG_NAME
 
+      - name: Publish to GitHub Packages
+        run: |
+          echo "Publishing release to GitHub Packages..."
+          mvn deploy -DskipTests
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Create GitHub Release
         uses: actions/github-script@v7
         with:
