--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
-name: CI - Tests & Quality Checks
+name: CI - Pull Request Validation
 
 on:
   pull_request:
-    branches: [development, master, main]  # Run on PRs to any of these branches
+    branches: [development, master, main]
   workflow_dispatch:
 
 permissions:
@@ -10,15 +10,14 @@ permissions:
   pull-requests: write
   issues: write
   checks: write
-  statuses: write
 
 jobs:
-  # First job: Check if we need to run tests based on changed files
+  # Check if we need to run full validation
   check-relevance:
-    name: Check Release Relevance
+    name: Check Changes Relevance
     runs-on: ubuntu-latest
     outputs:
-      should-test: ${{ steps.check.outputs.should-release }}
+      should-validate: ${{ steps.check.outputs.should-release }}
       reason: ${{ steps.check.outputs.reason }}
       version-type: ${{ steps.check.outputs.version-type }}
       next-version: ${{ steps.check.outputs.next-version }}
@@ -33,42 +32,57 @@ jobs:
         id: check
         uses: ./.github/actions/check-release-relevance
         with:
-          base-ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.base.sha || 'origin/master' }}
-          head-ref: ${{ github.event_name == 'pull_request' && github.event.pull_request.head.sha || github.sha }}
+          base-ref: ${{ github.event.pull_request.base.sha }}
+          head-ref: ${{ github.event.pull_request.head.sha }}
 
-      - name: Comment on PR with analysis
-        if: github.event_name == 'pull_request'
+      - name: Comment PR with impact analysis
         uses: actions/github-script@v7
         with:
           script: |
-            const shouldTest = '${{ steps.check.outputs.should-release }}' === 'true';
+            const shouldValidate = '${{ steps.check.outputs.should-release }}' === 'true';
             const reason = '${{ steps.check.outputs.reason }}';
             const versionType = '${{ steps.check.outputs.version-type }}';
             const nextVersion = '${{ steps.check.outputs.next-version }}';
+            const targetBranch = '${{ github.event.pull_request.base.ref }}';
             
-            let body = `## 🔍 CI Analysis\n\n`;
+            let body = `## 🔍 Pull Request Impact Analysis\n\n`;
             
-            if (shouldTest) {
-              body += `### ✅ Tests Required\n\n`;
+            if (shouldValidate) {
+              body += `### ✅ Full Validation Required\n\n`;
               body += `**Reason:** ${reason}\n`;
-              if (nextVersion) {
-                body += `**Impact:** ${versionType} release → version \`${nextVersion}\`\n`;
+              body += `**Target Branch:** \`${targetBranch}\`\n`;
+              
+              if (nextVersion && targetBranch === 'development') {
+                body += `**Impact:** Will create SNAPSHOT \`${nextVersion}-SNAPSHOT\`\n`;
+              } else if (nextVersion && (targetBranch === 'master' || targetBranch === 'main')) {
+                body += `**Impact:** Will create ${versionType} release \`${nextVersion}\`\n`;
               }
-              body += `\n### 🚀 What will happen:\n`;
-              body += `1. Full test suite will run\n`;
-              body += `2. Code quality checks will execute\n`;
-              body += `3. Build verification will be performed\n`;
-              if (nextVersion) {
-                body += `4. If merged to master → Auto-release to \`${nextVersion}\`\n`;
+              
+              body += `\n### 🚀 Validation Pipeline:\n`;
+              body += `1. ✅ Build and compile\n`;
+              body += `2. ✅ Run full test suite\n`;
+              body += `3. ✅ Code quality analysis\n`;
+              body += `4. ✅ Security dependency review\n`;
+              body += `5. ✅ Build verification\n`;
+              
+              if (targetBranch === 'development') {
+                body += `\n### 📦 After Merge:\n`;
+                body += `- Automatic SNAPSHOT release will be created\n`;
+                body += `- Available for testing and development\n`;
+              } else if (targetBranch === 'master' || targetBranch === 'main') {
+                body += `\n### 🚀 After Merge:\n`;
+                body += `- Automatic production release will be created\n`;
+                body += `- Published to GitHub Packages\n`;
+                body += `- Development branch will be updated to next SNAPSHOT\n`;
               }
             } else {
-              body += `### ⏭️ Tests Skipped\n\n`;
+              body += `### ⏭️ Validation Skipped\n\n`;
               body += `**Reason:** ${reason}\n\n`;
               body += `Only documentation or CI configuration files were changed.\n`;
-              body += `No tests or quality checks needed.`;
+              body += `This PR can be merged without running the full validation pipeline.`;
             }
             
-            // Find existing comment and update or create new one
+            // Find and update existing comment
             const comments = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -76,7 +90,7 @@ jobs:
             });
             
             const existingComment = comments.data.find(comment => 
-              comment.user.type === 'Bot' && comment.body.includes('🔍 CI Analysis')
+              comment.user.type === 'Bot' && comment.body.includes('🔍 Pull Request Impact Analysis')
             );
             
             if (existingComment) {
@@ -95,262 +109,75 @@ jobs:
               });
             }
 
-  # Only run tests if changes are relevant
-  test:
-    name: Maven Tests (Java 17)
+  # Full validation pipeline - only runs if changes are relevant
+  validate:
+    name: Full Validation Pipeline
     runs-on: ubuntu-latest
     needs: check-relevance
-    if: needs.check-relevance.outputs.should-test == 'true'
+    if: needs.check-relevance.outputs.should-validate == 'true'
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - name: Build and Test
+        uses: ./.github/actions/build-and-test
         with:
           java-version: '17'
-          distribution: 'temurin'
+          run-quality-checks: 'true'
+          skip-tests: 'false'
 
-      - name: Cache Maven dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      - name: Run tests
-        run: mvn clean test
-
-      - name: Generate test summary
-        if: always()
-        run: |
-          echo "## 🧪 Test Results" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          
-          if [ -f "target/surefire-reports/TEST-*.xml" ]; then
-            TOTAL_TESTS=$(grep -h "tests=" target/surefire-reports/TEST-*.xml | sed 's/.*tests="\([0-9]*\)".*/\1/' | awk '{sum+=$1} END {print sum}')
-            FAILED_TESTS=$(grep -h "failures=" target/surefire-reports/TEST-*.xml | sed 's/.*failures="\([0-9]*\)".*/\1/' | awk '{sum+=$1} END {print sum}')
-            ERRORS=$(grep -h "errors=" target/surefire-reports/TEST-*.xml | sed 's/.*errors="\([0-9]*\)".*/\1/' | awk '{sum+=$1} END {print sum}')
-            SKIPPED_TESTS=$(grep -h "skipped=" target/surefire-reports/TEST-*.xml | sed 's/.*skipped="\([0-9]*\)".*/\1/' | awk '{sum+=$1} END {print sum}')
-            
-            PASSED_TESTS=$((TOTAL_TESTS - FAILED_TESTS - ERRORS - SKIPPED_TESTS))
-            
-            echo "- **Total Tests:** $TOTAL_TESTS" >> $GITHUB_STEP_SUMMARY
-            echo "- **Passed:** ✅ $PASSED_TESTS" >> $GITHUB_STEP_SUMMARY
-            echo "- **Failed:** ❌ $FAILED_TESTS" >> $GITHUB_STEP_SUMMARY
-            echo "- **Errors:** ⚠️ $ERRORS" >> $GITHUB_STEP_SUMMARY
-            echo "- **Skipped:** ⏭️ $SKIPPED_TESTS" >> $GITHUB_STEP_SUMMARY
-            
-            if [ "$FAILED_TESTS" -eq 0 ] && [ "$ERRORS" -eq 0 ]; then
-              echo "" >> $GITHUB_STEP_SUMMARY
-              echo "### ✅ All tests passed!" >> $GITHUB_STEP_SUMMARY
-            else
-              echo "" >> $GITHUB_STEP_SUMMARY
-              echo "### ❌ Some tests failed!" >> $GITHUB_STEP_SUMMARY
-            fi
-          else
-            echo "- **Status:** No test results found" >> $GITHUB_STEP_SUMMARY
-          fi
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: |
-            target/surefire-reports/
-            target/site/jacoco/
-
-  # Only run quality checks if changes are relevant
-  code-quality:
-    name: Code Quality & Security
-    runs-on: ubuntu-latest
-    needs: [check-relevance, test]
-    if: needs.check-relevance.outputs.should-test == 'true' && (success() || failure())
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Cache Maven dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      - name: Run quality checks
-        run: |
-          echo "Running code quality analysis..."
-          mvn clean compile -Pquality
-          mvn -Pquality spotbugs:check pmd:check checkstyle:check
-
-      - name: Generate coverage report
-        run: mvn jacoco:report
-
-      - name: Upload coverage reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-reports
-          path: |
-            target/site/jacoco/
-            target/jacoco.exec
-
-  # Only run build verification if tests passed
-  build-verification:
-    name: Build Verification
-    runs-on: ubuntu-latest
-    needs: [check-relevance, test, code-quality]
-    if: needs.check-relevance.outputs.should-test == 'true' && needs.test.result == 'success' && needs.code-quality.result == 'success'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Cache Maven dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      - name: Build and package
-        run: |
-          mvn clean package -DskipTests
-          mvn javadoc:javadoc
-
-      - name: Verify artifacts
-        run: |
-          echo "Verifying generated artifacts..."
-          ls -la target/
-
-          VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-          echo "Project version: $VERSION"
-
-          # Check that all required artifacts exist
-          if [ -f "target/logging-library-${VERSION}.jar" ]; then
-            echo "✅ Main JAR exists"
-          else
-            echo "❌ Main JAR missing"
-            exit 1
-          fi
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-artifacts
-          path: |
-            target/*.jar
-            target/site/apidocs/
-          retention-days: 7
-
-  # Dependency review only for PRs
-  dependency-review:
-    name: Dependency Review
-    runs-on: ubuntu-latest
-    needs: check-relevance
-    if: github.event_name == 'pull_request'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Dependency Review
+      - name: Dependency Review (Security)
         uses: actions/dependency-review-action@v4
         with:
           fail-on-severity: moderate
 
-  # Performance tests only when explicitly needed
-  performance-test:
-    name: Performance Tests
+  # Summary of validation results
+  validation-summary:
+    name: Validation Summary
     runs-on: ubuntu-latest
-    needs: [check-relevance, test]
-    if: needs.check-relevance.outputs.should-test == 'true' && github.event_name == 'workflow_dispatch'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Cache Maven dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      - name: Run performance tests
-        run: |
-          echo "Running performance tests..."
-          mvn test -Dtest=**/*PerformanceTest
-
-      - name: Upload performance results
-        uses: actions/upload-artifact@v4
-        with:
-          name: performance-results
-          path: target/performance-reports/
-
-  # Summary job that runs always
-  summary:
-    name: CI Summary
-    runs-on: ubuntu-latest
-    needs: [check-relevance, test, code-quality, build-verification]
+    needs: [check-relevance, validate]
     if: always()
 
     steps:
-      - name: Generate CI Summary
+      - name: Generate validation summary
         run: |
-          echo "## 🔍 CI Pipeline Summary" >> $GITHUB_STEP_SUMMARY
+          echo "## 🔍 Pull Request Validation Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          SHOULD_TEST="${{ needs.check-relevance.outputs.should-test }}"
+          SHOULD_VALIDATE="${{ needs.check-relevance.outputs.should-validate }}"
           REASON="${{ needs.check-relevance.outputs.reason }}"
+          VALIDATION_RESULT="${{ needs.validate.result }}"
           
-          if [ "$SHOULD_TEST" = "true" ]; then
-            echo "### ✅ Full CI Pipeline Executed" >> $GITHUB_STEP_SUMMARY
+          if [ "$SHOULD_VALIDATE" = "true" ]; then
+            echo "### ✅ Full Validation Executed" >> $GITHUB_STEP_SUMMARY
             echo "**Reason:** $REASON" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
-            echo "### Test Results" >> $GITHUB_STEP_SUMMARY
-            echo "- **Unit & Integration Tests:** ${{ needs.test.result }}" >> $GITHUB_STEP_SUMMARY
-            echo "- **Code Quality Checks:** ${{ needs.code-quality.result }}" >> $GITHUB_STEP_SUMMARY
-            echo "- **Build Verification:** ${{ needs.build-verification.result }}" >> $GITHUB_STEP_SUMMARY
-            echo "" >> $GITHUB_STEP_SUMMARY
-
-            # Check if all checks passed
-            if [[ "${{ needs.test.result }}" == "success" && "${{ needs.code-quality.result }}" == "success" && "${{ needs.build-verification.result }}" == "success" ]]; then
-              echo "### ✅ All Checks Passed!" >> $GITHUB_STEP_SUMMARY
-              echo "The logging library is ready for release." >> $GITHUB_STEP_SUMMARY
+            
+            if [ "$VALIDATION_RESULT" = "success" ]; then
+              echo "### ✅ All Validations Passed!" >> $GITHUB_STEP_SUMMARY
+              echo "- Build and compilation: ✅ Success" >> $GITHUB_STEP_SUMMARY
+              echo "- Test execution: ✅ Success" >> $GITHUB_STEP_SUMMARY
+              echo "- Code quality checks: ✅ Success" >> $GITHUB_STEP_SUMMARY
+              echo "- Security review: ✅ Success" >> $GITHUB_STEP_SUMMARY
+              echo "" >> $GITHUB_STEP_SUMMARY
+              echo "🚀 **This PR is ready to merge!**" >> $GITHUB_STEP_SUMMARY
               
               NEXT_VERSION="${{ needs.check-relevance.outputs.next-version }}"
               if [ -n "$NEXT_VERSION" ]; then
                 echo "" >> $GITHUB_STEP_SUMMARY
-                echo "**Next Release:** \`$NEXT_VERSION\` (when merged to master)" >> $GITHUB_STEP_SUMMARY
+                echo "**After merge:** Version \`$NEXT_VERSION\` will be automatically released" >> $GITHUB_STEP_SUMMARY
               fi
             else
-              echo "### ❌ Some Checks Failed" >> $GITHUB_STEP_SUMMARY
-              echo "Please review the failed jobs above." >> $GITHUB_STEP_SUMMARY
+              echo "### ❌ Validation Failed" >> $GITHUB_STEP_SUMMARY
+              echo "Some validation checks failed. Please review and fix the issues." >> $GITHUB_STEP_SUMMARY
+              echo "" >> $GITHUB_STEP_SUMMARY
+              echo "**Validation Status:** $VALIDATION_RESULT" >> $GITHUB_STEP_SUMMARY
             fi
           else
-            echo "### ⏭️ CI Pipeline Skipped" >> $GITHUB_STEP_SUMMARY
+            echo "### ⏭️ Validation Skipped" >> $GITHUB_STEP_SUMMARY
             echo "**Reason:** $REASON" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
-            echo "No tests needed - only documentation or CI configuration changes detected." >> $GITHUB_STEP_SUMMARY
+            echo "Only documentation or CI configuration changes detected." >> $GITHUB_STEP_SUMMARY
+            echo "🚀 **This PR can be merged without full validation.**" >> $GITHUB_STEP_SUMMARY
           fi
