--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.carlosmgv02</groupId>
     <artifactId>logging-library</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.0.3</version>
     <name>Professional Logging Library</name>
     <description>A production-ready logging library built with Hexagonal Architecture for Spring Boot applications</description>
     <url>https://github.com/carlosmgv02/logging-library</url>
@@ -96,7 +96,11 @@
             <version>1.1.3</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!-- Logback for logging -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
